# SentimentTextClassification

./: README.md
Model/: dev.dockerfile
Model/.devcontainer/: devcontainer.json
Model/ModelBuild/: CMakeLists.txt  README.md
Model/ModelBuild/configs/: cleanstopword.cpp
Model/ModelBuild/data/: getData.sh
Model/ModelBuild/include/: MB_Fnn.hpp  MB_LinearRegression.hpp  MB_LogisticRegression.hpp  MB_RandomForest.hpp  ModelBuild.hpp  Preprocessing.hpp  SATC.hpp  Stemmer.hpp  StringManipulation.hpp  TxtGztoTxt.hpp  TxtgzToJson.hpp  mein_knn.hpp  porter_stemmer.h
Model/ModelBuild/src/: MB_Fnn.cpp  MB_LinearRegression.cpp  MB_LogisticRegression.cpp  MB_LogisticRegression.hpp  MB_RandomForest.cpp  ModelBuild.cpp  Preprocessing.cpp  SATC.cpp  StringManipulation.cpp  mein_knn.cpp
Model/ModelServer/: README.md
